--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "rc-tooltip": "^6.1.2",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
+    "react-loadable": "^5.5.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.1",
+    "tailwindcss": "^3.3.6"
   }
 }
